--- a/MyFitTracker/app/src/main/AndroidManifest.xml
+++ b/MyFitTracker/app/src/main/AndroidManifest.xml
@@ -30,7 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".domain.services.BleService" />
+        <service android:name=".domain.services.BleService"
+            android:enabled="true"
+            android:exported="true"
+            />
     </application>
 
 </manifest>
